# TelecomProject

./: README.md  pyproject.toml
pages/: access_page.py  access_page_locators.py  addcustomer_page.py  addcustomer_page_locators.py  base_page.py  index_page.py  index_page_locators.py
resources/: constants.py
tests/: conftest.py  test_addcustomer.py
